--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- 8thWall Web - Replace the app key here with your own app key -->
     <script async src="//apps.8thwall.com/xrweb?appKey=h7Y4wNX1pDwoflr37QWOrawQ7iwuhvIe9wMNGSc7AdDFTdwJkfsyP5ZlyIGmw5IwvBlVPJ"></script>
+    <script src="components.js"></script>
   </head>
 
   <body>
