--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>8th Wall Web: fran</title>
+    <title>8th Wall Web: autumn</title>
 
     <link rel="stylesheet" href="index.css">
     <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
@@ -32,7 +32,7 @@
           id="depthkitEntity" 
           position="0 1.18 0"
           scale="1.25 1.25 -1.25"
-          depthkit="capture: fran; loop: true; opacity: 0.0;">
+          depthkit="capture: autumn; loop: true; opacity: 0.0;">
         </a-entity>
         
         <a-circle
