--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           id="depthkitEntity" 
           position="0 1.18 0"
           scale="1.25 1.25 -1.25"
-          depthkit="capture: autumn; loop: true; opacity: 0.0;">
+          depthkit="capture: fran; loop: true; opacity: 0.0;">
         </a-entity>
         
         <a-circle
